fixes Add width and height on canvas Fix path to .mjs

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>SNAKE</title>
 </head>
 <body>
-    <canvas id="renderer"></canvas>
+    <canvas id="renderer" width="800px" height="800px"></canvas>
     <p id="feedback"></p>
 </body>
-<script type="module" src="src/main.mjs"></script>
+<script type="module" src="./src/main.mjs"></script>
 </html>
