--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SNAKE</title>
-</head>
-<body>
+  </head>
+  <body>
     <canvas id="renderer" width="800px" height="800px"></canvas>
     <p id="feedback"></p>
-</body>
-<script type="module" src="./src/main.mjs"></script>
+  </body>
+  <script type="module" src="./dist/main.js"></script>
+  <script type="module" src="./dist/testImport.js"></script>
 </html>
